...
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:fillViewport="true"
        android:background="#DDD">

        <TextView
            android:id="@+id/recipe_ingredients_tv"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="@dimen/layout_margin_medium" />
    </androidx.core.widget.NestedScrollView>

    <TextView
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_medium"
        android:text="@string/instructions_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_step_videos_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recipe_step_item" />

</LinearLayout>

