<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.RecipeDetailActivity"
    tools:ignore="MergeRootFrame">

    <FrameLayout
        android:id="@+id/recipe_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
