<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.android.bakingapp.activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_recipe_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/main_activity_recipe_list_item">
    </androidx.recyclerview.widget.RecyclerView>

</ScrollView>

