<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_step_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".activities.RecipeStepActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/recipe_step_activity_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="99" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/recipe_step_activity_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000"
        app:tabIndicatorHeight="5dp"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabGravity="fill" />

</LinearLayout>